--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -48,7 +48,7 @@ const rememberMe = !!email
           </div>
           <div class="text-sm">
             <a href="/register" class="text-green-400 hover:text-green-500">
-              Don't you have account?
+              No tienes una cuenta? Registrate Aqui!
             </a>
           </div>
         </div>
